Add method to get all available text. Simplify by using built-in linked list methods.
git-svn-id: https://jumble.svn.sourceforge.net/svnroot/jumble/trunk@208 3c96dea9-a453-4bd5-b869-110af7cb2dd7